--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ html{
     /* Background Color */
     --primary-color: #F57607;
     --secondary-color: #F57607;
-    --dark-color: #eee7e7;
+    --dark-color: #fcf5f5;
     --bg-dark-gray: #5c5d64;
     --bg-black: #1d1b1b;
     --dark-light-color: #777a7f;
